[package]
name = "music-box"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
glium = { version = "0.28", default-features = true }
image = "0.23"
imgui = "0.6.0"
imgui-glium-renderer = "0.6.0"
imgui-winit-support = "0.6.0"
midir = "0.7.0"
wmidi = "4.0.1"
cpal = "0.13.1"
anyhow = "1.0.12"